# LLMcheck

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/prd/: 2026-07-18-agent-callable-dual-engine-pipeline.md
docs/progress/: 2026-06-15-current-gate-audit.md  2026-07-18-p0-agent-callable.md  README.md  local_gate_run_index.json
docs/superpowers/plans/: 2026-06-01-domain-neutral-document-upgrade.md
llmcheck/: __init__.py  agent_api.py  batch.py  cleaning.py  cli.py  cross.py  desktop_gui.py  diagnostics.py  final_gate.py  gui.py  gui_exe.py  llm.py  model_compare.py  pdf.py  pipeline.py  preflight.py  preprocess.py  profiles.py  quality.py  repair.py  rules.py  run_guard.py  structure.py
old/docs/prd/: 2026-06-05-cleaning-and-llm-review-redesign.md  2026-06-10-mineru-first-document-pipeline-redesign.md
old/docs/superpowers/specs/: 2026-06-01-domain-neutral-document-upgrade-design.md
skill/: README.md  README.zh-CN.md  SKILL.md
skill/agents/: openai.yaml
tests/: test_agent_api.py  test_cross_select.py  test_desktop_gui.py  test_interfaces_profiles.py  test_latex_unit_cleanup.py  test_llmcheck.py  test_pdf.py  test_pipeline_profiles.py  test_profiles_prompts.py  test_quality_finalization.py
tools/: build_windows_gui_exe.ps1  deliver_llm_full_outputs.py  organize_pdf_output.py  package_skill.sh
