[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMcheck"
version = "0.1.1"
description = "Markdown full-book LLM correction, acceptance, and PDF delivery."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
llmcheck = "llmcheck.cli:main"

[tool.setuptools.packages.find]
include = ["llmcheck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
